--- a/styles/signin.css
+++ b/styles/signin.css
@@ -1,5 +1,5 @@
 body{
-    width: 100%;
+    width: 1250px;
     height: 667px;
     background-image: url('../images/new.jpeg');
     background-repeat: no-repeat;
@@ -28,8 +28,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 80px;
-    padding-bottom: 30px;
+    padding-top: 40px;
+    padding-bottom: 15px;
 }
 
 .signin p{
@@ -77,8 +77,8 @@ body{
     background-color: #2871AA;
     border-radius: 10px;
     border-color: transparent;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    margin-top: 50px;
+    margin-bottom: 10px;
     color: #fff;
     font-family: 'Open sans';
     font-size: 20px;
