--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,6 +1,6 @@
 body{
-    width: 100%;
-    height: 100%px;
+    width: 1250px;
+    height: 100%;
     background-image: url('../images/new.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -16,6 +16,7 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    margin-left: 20px;
 }
 
 .rectangle{
@@ -29,8 +30,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 80px;
-    padding-bottom: 30px;
+    padding-top: 50px;
+    padding-bottom: 15px;
 }
 
 .signin p{
@@ -80,7 +81,7 @@ body{
     border-radius: 10px;
     border-color: transparent;
     margin-top: 20px;
-    margin-bottom: 20px;
+    /* margin-bottom: 15px; */
     color: #fff;
     font-family: 'Open sans';
     font-size: 20px;
@@ -138,7 +139,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 
 .facebook, .instagram {
